--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,16 @@
-# Using H2 for local testing
-spring.datasource.url=jdbc:h2:mem:splitwise
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# PostgreSQL settings (Docker will override these, but it's safe to keep for local fallback)
+spring.datasource.url=jdbc:postgresql://localhost:5433/splitwise
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=splitwise
+spring.datasource.password=splitwise
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.hibernate.ddl-auto=create-drop
+# Hibernate / JPA
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# JWT Configuration
-jwt.secret=your-secret-key-change-this-in-production
-jwt.expiration=86400000
-
-# Swagger UI configuration
+# Swagger UI
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
