Update authentication and swagger config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
+
+
+spring.mvc.contentnegotiation.favor-parameter=false
+spring.mvc.contentnegotiation.favor-path-extension=false
+spring.mvc.contentnegotiation.media-types.json=application/json;charset=UTF-8
